[gd_scene format=3]

[ext_resource type="Script" path="res://scenes/BattleScene.gd" id=1]

[node name="BattleScene" type="Node2D"]
script = ExtResource(1)

[node name="Backdrop" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.09, 0.10, 0.14, 1.0)
mouse_filter = 2
z_index = -10

[node name="Stage" type="Node2D" parent="."]

[node name="Ground" type="Line2D" parent="Stage"]
points = PackedVector2Array(120, 430, 1030, 430)
width = 6.0
default_color = Color(0.18, 0.20, 0.24, 1.0)
antialiased = true

[node name="HeroShadow" type="Sprite2D" parent="Stage"]
position = Vector2(220, 408)

[node name="EnemyShadow" type="Sprite2D" parent="Stage"]
position = Vector2(760, 358)

[node name="HeroSprite" type="Sprite2D" parent="Stage"]
position = Vector2(220, 368)

[node name="EnemySprite" type="Sprite2D" parent="Stage"]
position = Vector2(760, 320)

[node name="EnemySprite" type="Sprite2D" parent="Stage"]
position = Vector2(760, 320)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Root" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="UI/Root"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HeroLabel" type="Label" parent="UI/Root/VBox"]
text = "Hero:"

[node name="EnemyLabel" type="Label" parent="UI/Root/VBox"]
text = "Enemy:"

[node name="Buttons" type="HBoxContainer" parent="UI/Root/VBox"]

[node name="BtnAttack" type="Button" parent="UI/Root/VBox/Buttons"]
text = "Attack"

[node name="BtnFireball" type="Button" parent="UI/Root/VBox/Buttons"]
text = "Fireball"

[node name="BtnPotion" type="Button" parent="UI/Root/VBox/Buttons"]
text = "Potion"

[node name="BtnEndTurn" type="Button" parent="UI/Root/VBox/Buttons"]
text = "End Turn"

[node name="TurnOrder" type="Label" parent="UI/Root/VBox"]
text = "Turn order:"

[node name="Log" type="RichTextLabel" parent="UI/Root/VBox"]
size_flags_vertical = 3
autowrap_mode = 2
scroll_active = true
scroll_following = true
